--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         color: white;
         margin: 0px;
         padding: 0px;
-        background: url('Images/background.jpg');
+        background: url('Images/Background.jpg');
     }
 
     .left {
